# tauri-app-template

./: README.md  go.mod  go.sum  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
.husky/: pre-commit
scripts/: meltctl-desktop.go  setup_host.sh
scripts/cmd/: root.go
scripts/cmd/version/: update.go  version.go
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src/context/: rspc.tsx
