[build-dependencies]
[build-dependencies.tauri-build]
features = []
version = '1.4'

[dependencies]
open = '5.0.0'
serde_json = '1.0'

[dependencies.rspc]
features = ['tauri']
version = '0.1.3'

[dependencies.serde]
features = ['derive']
version = '1.0'

[dependencies.tauri]
features = ['system-tray', 'updater', 'shell-open']
version = '1.4'

[dependencies.tokio]
features = ['full']
version = '1.32.0'

[features]
custom-protocol = ['tauri/custom-protocol']

[package]
authors = ['Kunal Singh <kunal@kunalsin9h.com>']
description = 'Desktop application for App'
edition = '2021'
license = ''
name = 'App-desktop'
repository = 'https://github.com/App/desktop'
version = '0.3.0'

[profile]
[profile.release]
codegen-units = 1
lto = true
opt-level = 's'
panic = 'abort'
strip = true
